# harbor-deepagents

./: .gitignore  README.md  pyproject.toml
configs/: job.yaml  terminal-bench-daytona.yaml  terminal-bench-docker.yaml  terminal-bench-modal.yaml  web-scraper-test.yaml
scripts/: export_traces.py  run_local.sh  run_modal.py
src/harbor_deepagents/: __init__.py  cli.py
src/harbor_deepagents/agents/: __init__.py  custom_agent.py  deepagent_harbor.py  harbor_tools.py  langsmith_integration.py  prompts.py
src/harbor_deepagents/utils/: __init__.py  langsmith_exporter.py
src/harness_entry/: __init__.py
tasks/web-scraper-task/: instruction.md  task.toml
tasks/web-scraper-task/environment/: Dockerfile
tasks/web-scraper-task/solution/: solve.sh
tasks/web-scraper-task/tests/: test.sh  test_solution.py
