[project]
name = "harbor-deepagents"
version = "0.1.0"
description = "Harbor integration with LangChain DeepAgents and LangSmith tracing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Harbor - use latest version
    "harbor>=0.1.12",

    # LangChain + DeepAgents (upgraded to 0.2.5 for LocalFilesystemBackend support)
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "deepagents>=0.2.5",

    # LangSmith for observability
    "langsmith>=0.4.0",

    # Additional tools
    "tavily-python>=0.5.0",

    # Modal for cloud execution
    "modal>=0.64.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ipython>=8.30.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
