[project]
name = "harbor-deepagents"
version = "0.1.0"
description = "Harbor integration with LangChain DeepAgents and LangSmith tracing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Harbor runtime
    "harbor>=0.1.12",

    # LangChain + DeepAgents (upgraded to 0.2.5 for LocalFilesystemBackend support)
    "langchain>=1.0.2",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.0",
    "deepagents>=0.2.5",
    "openai>=1.109.1,<2.0.0",

    # LangSmith for observability
    "langsmith>=0.4.0",

    # Additional tools
    "tavily-python>=0.5.0",

    # Modal for cloud execution
    "modal>=0.64.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "e2b==2.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ipython>=8.30.0",
    "ruff>=0.8.0",
]

[project.scripts]
harness = "harbor_deepagents.cli:main"
tb-docker = "harbor_deepagents.cli:run_tb_docker"
tb-daytona = "harbor_deepagents.cli:run_tb_daytona"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
override-dependencies = [
    "openai>=1.109.1,<2.0.0",
    "e2b==2.4.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
